@@ -2,6 +2,7 @@ package fr.umontpellier.iut.groupe1.controllers;
 
 import fr.umontpellier.iut.groupe1.thread.ThreadTimer;
 import javafx.animation.AnimationTimer;
+import javafx.application.Platform;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Label;
 
@@ -13,6 +14,7 @@ public class MainController implements Initializable {
     public Label label_room;
     public Label timerJeu;
 
+    //--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml
 
     @Override
     public synchronized void initialize(URL url, ResourceBundle resourceBundle) {
